--- a/DAY-7/Frontend/src/index.scss
+++ b/DAY-7/Frontend/src/index.scss
@@ -20,6 +20,10 @@ html{
   padding: 1rem;
   display: flex;
   gap: 0.75rem;
+  flex-wrap: wrap;
+  align-items: center;
+ 
+
 
 
 
@@ -27,8 +31,48 @@ html{
     border-radius: 0.75rem;
     padding-block: 1rem;
     padding-inline: 1.25rem;
-    background: linear-gradient(to bottom, #f46969, #f33e3e);
+  
+    
+     background: linear-gradient(to bottom, #FFFD77, #FFE882);
     border: 2px solid rgb(48, 47, 47);
+    color: black;
+
+    h2{
+      font-size: 1.75rem;
+    }
+    h5{
+      font-size: 1.25rem;
+      font: 600;
+    }
+    
+
+  .Button-handler{
+    display:  flex;
+    gap: 0.75rem;
+    
+  .red{
+        background: linear-gradient(to bottom, #f46969, #f33e3e);
+        color: white
+      }
+  .blue{
+        background: linear-gradient(to bottom, #6a5eed, #1534e4);
+        color: white
+      }
+
+    button{
+      margin-top: 0.75rem;
+      padding-inline: 1.75rem;
+      padding-block: 0.35rem;
+      border-radius: 0.25rem;
+      border: none;
+      
+
+      
+     
+    }
+
+  }
+    
   }
 
  
@@ -60,5 +104,7 @@ form{
     color:rgb(244, 251, 255);
     font: 400;
     background: linear-gradient(to bottom, #D4ADCF,#856084)
+
+    
   }
 }
